fixing broken css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,3 @@
-
 @font-face {
   font-family: 'Inter';
   font-style: normal;
@@ -7,21 +6,13 @@
        url('/fonts/InterVariable.woff2') format('woff2'); 
 }
 
-@font-face {
-  font-family: 'Source sans pro';
-  font-style: normal;
-  font-weight: 125 950;
-  src: local('SourceSansPro'),
-       url('/fonts/SourceSansPro.woff') format('woff'), 
-       url('/fonts/SourceSansPro.woff2') format('woff2'); 
-}
-
 html {
   --white: white;
   --black: black;
   --indigo-light: #9F8FFF;
   --indigo: #6E56FF;
   --indigo-dark: #3316d6;
+  --coral-lightest: #ffa5a5;
   --coral-light: #f97777;
   --coral: #FF4E4E;
   --coral-dark: #b6340d;
@@ -879,8 +870,9 @@ a:focus {
   opacity: 1 !important;
   cursor: pointer;
   display: inline;
-  font-variation-settings: "wght" 440, "width" 50;
+  font-variation-settings: 'wght' 440;
   font-family: 'Inter';
+  text-decoration: none !important;
 }
 
 .a-alt:hover {
@@ -1277,10 +1269,10 @@ a:focus {
 
 .hero-description {
   font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;    
-  font-variation-settings: "wght" 440,  ;
-  font-size: 22px;
-  line-height: 1.4;
-  letter-spacing: -.02em;
+  font-variation-settings: "wght" 440;
+  font-size: 24px;
+  line-height: 1.5;
+  letter-spacing: 0em;
   color: var(--gray-1000);
   margin: 10px 0 10px;
   text-align: center;
@@ -1509,7 +1501,48 @@ h6,
   }
 }
 
+
 .arrow-red {
+  display: inline-block;  
+  height: 72px;
+  margin-left: 0px;
+  margin-right: 28px;
+  position: relative;
+  padding-left: 12px;
+  padding-right: 12px;
+  background: var(--coral-light);
+  color: black;
+   &:after {
+    border-left: 20px solid var(--coral-light);
+  }
+
+.arrow-red:after {
+  content: "";
+  position: absolute;
+  border-bottom: 36px solid transparent;
+  border-top: 36px solid transparent;
+  height: 0px;
+  width: 0px;
+  margin-right: -18px;
+  right: 0; 
+}
+
+.arrow-indigo {
+  display: inline-block;  
+  height: 72px;
+  margin-left: 0px;
+  margin-right: 2px;
+  position: relative;
+  padding-left: 12px;
+  padding-right: 12px;
+  background: #9F8FFF;
+  color: black;
+   &:after {
+    border-left: 20px solid #9F8FFF;
+  }
+}
+
+.arrow-coral {
   display: inline-block;  
   height: 72px;
   margin-left: 0px;
@@ -1524,7 +1557,34 @@ h6,
   }
 }
 
-.arrow-red:after {
+.arrow-coral:after {
+  content: "";
+  position: absolute;
+  border-bottom: 36px solid transparent;
+  border-top: 36px solid transparent;
+  height: 0px;
+  width: 0px;
+  margin-right: -18px;
+  right: 0; 
+}
+
+
+.arrow-lime {
+  display: inline-block;  
+  height: 72px;
+  margin-left: 0px;
+  margin-right: 28px;
+  position: relative;
+  padding-left: 12px;
+  padding-right: 12px;
+  background: var(--lime);
+  color: black;
+   &:after {
+    border-left: 20px solid var(--lime);
+  }
+}
+
+.arrow-lime:after {
   content: "";
   position: absolute;
   border-bottom: 36px solid transparent;
@@ -1557,7 +1617,7 @@ h6,
   border-top: 36px solid transparent;
   height: 0px;
   width: 0px;
-  margin-right: -17.5px;
+  margin-right: -18px;
   right: 0; 
 }
 
@@ -17637,13 +17697,14 @@ button.bg-blue:focus {
   .article h2 {
     font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
     text-rendering: optimizeLegibility;
-    font-variation-settings: "wght" 620,  ;    
+    font-variation-settings: "wght" 620;  
     margin-top: 3.5rem;
     margin-bottom: .75rem;
     font-size: 32px;
     color: var(--hiContrast);
     line-height: 1.1;
   }
+}
 
   .article h2::before {
     content: "";
@@ -17678,9 +17739,10 @@ button.bg-blue:focus {
     margin-top: 2rem;
     margin-bottom: .5rem;
     font-weight: 700;
-    font-variation-settings: 'wght' 620, 'wdth' 50;
-    font-size: 20px;
-    line-height: 1.1;
+    font-variation-settings: 'wght' 620;
+    font-size: 24px;
+    line-height: 1.25;
+
   }
 
   .article h4::before {
@@ -17696,9 +17758,8 @@ button.bg-blue:focus {
     font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Ubuntu, sans-serif;
     margin-top: 2rem;
     margin-bottom: .5rem;
-    font-weight: 600;
-    font-variation-settings: 'wght' 620, 'wdth' 50;
-    font-size: 16px;
+    font-variation-settings: 'wght' 550;
+    font-size: 20px;
     color: var(--hiContrast);
     line-height: 1.1;
   }
@@ -17812,9 +17873,27 @@ button.bg-blue:focus {
     margin: auto;
   }
 
-  .container-fw {
+.container-fw {
+  width: 100%;
+  z-index: 0;
+}
+
+
+.container-nav {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+@media (min-width: 600px) {
+  .container-nav {
     width: 100%;
-    z-index: -1;
+    margin-right: auto;
+    margin-left: auto;
+    padding-right: 24px;
+    padding-left: 24px;
   }
 }
 
